fix generate products
