# src/models/user.mobile.model.ts
@@ -1,14 +1,15 @@
-import { IsString } from 'class-validator';
+import { IsEmail, IsString } from 'class-validator';
 
 export class editUserMobileModel {
   @IsString()
   uid: string;
 
+  @IsEmail()
   email: string | null;
-
-  // password?: string | null;
 
   displayName?: string;
 
   photoURL?: string | any;
+
+  phoneNumber?: string;
 }
